ProyectoIndividual/force-app/main/default/objects/Module_Response__c/Module_Response__c.object-meta.xml
<CustomObject>
    <label>Module_Response</label>
    <nameField>
        <displayFormat>MR - {0000}</displayFormat>
        <label>ModuleResponse</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Module_ Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>