ProyectoIndividual/force-app/main/default/objects/Module_Response__c/fields/Module_Name__c.field-meta.xml
<CustomField>
    <fullName>Module_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Module Name</label>
    <referenceTo>Module__c</referenceTo>
    <relationshipLabel>Module_ Responses</relationshipLabel>
    <relationshipName>Module_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>