ProyectoIndividual/force-app/main/default/objects/Module_Response__c/fields/Progress__c.field-meta.xml
<CustomField>
    <fullName>Progress__c</fullName>
    <formula>(Module__r.Unit_Quantity__c /Unit_Response_Quantity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Progress</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>