ProyectoIndividual/force-app/main/default/objects/Module_Response__c/fields/User_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Module_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>